test/runnable/imports/opover7177a.d
module imports.opover7177a;

auto opDollar(R)(R r) { return r.length; }
