test/fail_compilation/test2830e.d
module test2830e;

import imports.test2830e;

void foo()
{
    TestEnum e;
}
